8025841: JVMTI: "vtable stub" dynamic code notification is misplaced

Generate correct "vtable stub" dynamic code notifications

Reviewed-by: sspitsyn, kvn, coleenp